--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "northem-dark-atom-syntax",
   "theme": "syntax",
   "version": "0.11.2",
-  "description": "Northem is a north-bluish dark theme based on the same named color palette designed by Arctic Ice Studio.This is a darker and more blue-tinged variation.",
+  "description": "A north-bluish dark theme based on the same named color palette designed by Arctic Ice Studio. This is a darker and more blue-tinged variation.",
   "author": {
     "name": "Arctic Ice Studio",
     "email": "development@arcticicestudio.com"
