--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 # title     Git File Attributes             +
 # project   northem-dark-atom-syntax        +
 # file      .gitattributes                  +
-# version                                   +
+# version   0.0.0                           +
 # author    Arctic Ice Studio               +
 # email     development@arcticicestudio.com +
 # copyright Copyright (C) 2015-2016         +
