--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # title     Git Ignore Pattern              +
 # project   northem-dark-atom-syntax        +
 # file      .gitignore                      +
-# version                                   +
+# version   0.0.0                           +
 # author    Arctic Ice Studio               +
 # email     development@arcticicestudio.com +
 # copyright Copyright (C) 2015-2016         +
