--- a/.gitattributes
+++ b/.gitattributes
@@ -5,14 +5,13 @@
 # version   0.20.0                          +
 # author    Arctic Ice Studio               +
 # email     development@arcticicestudio.com +
-# copyright Copyright (C) 2015-2016         +
+# copyright Copyright (C) 2016              +
 # created   2015-03-15 20:17 UTC+0100       +
-# modified  2016-04-10 20:04 UTC+0200       +
+# modified  2016-08-06 11:39 UTC+0200       +
 # +++++++++++++++++++++++++++++++++++++++++++
 #
 # [Description]
-# Git dotfile providing file attribute handling for the git-based "Northem Dark - Atom Syntax" project.
-# Based on the Git File Attribute dotfile of the "Glacier - Git" project (glacier-git@0.21.0).
+# Provides git file attribute handling based on the skeleton file of the "glacier-git@0.25.0" project.
 #
 # [Index]
 #   (1.0) git
@@ -58,15 +57,8 @@
 #       (4.0.0) Plain
 #   (5) Project Specific Configuration
 #
-# [Dependencies]
-# Development
-#   Engines
-#     - git@2.8.* (http://git-scm.com)
-#   Skeletons
-#     - glacier-git@0.21.0 (https://github.com/arcticicestudio/glacier-git)
-#
 # [Copyright]
-# Copyright (C) 2015-2016 Arctic Ice Studio <development@arcticicestudio.com>
+# Copyright (C) 2016 Arctic Ice Studio <development@arcticicestudio.com>
 #
 # [References]
 # Git Documentation
